<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioFragment"
    android:background="@drawable/fondo3">


    <!-- TITLE -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="237dp"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/heycomic"
        android:text="Bienvenido"
        android:textColor="#57BBFD"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:layout_margin="30dp"
        android:textColorHint="#333940"
        android:textColor="#333940"
        android:hint="@string/hint_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.380">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="331dp"
            android:layout_height="63dp"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#333940"
            android:background="@drawable/imput"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.380"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:layout_margin="30dp"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        android:textColor="#333940"
        android:textColorHint="#333940"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.530">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="331dp"
            android:layout_height="63dp"
            android:background="@drawable/imput"

            android:textColor="#333940"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.530"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- NEXT -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="123dp"
        android:layout_height="59dp"
        android:background="@drawable/custom_buttom"
        android:fontFamily="@font/heycomic"
        android:text="@string/button"
        android:textSize="15dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <!-- CANCEL -->
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="123dp"
        android:layout_height="59dp"
        android:background="@drawable/custom_buttom"
        android:fontFamily="@font/heycomic"
        android:text="@string/button_cancel"
        android:textSize="15dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />



    <!-- FOOTER -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footer"
        android:textColor="@color/white"
        android:fontFamily="@font/stanberry"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        tools:ignore="MissingConstraints"
        />

</androidx.constraintlayout.widget.ConstraintLayout>