<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioFragment"
    android:background="@drawable/fondo">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="232dp"
        android:layout_height="132dp"
        android:fontFamily="@font/stanberry"
        android:text="@string/frase"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="194dp"
        android:layout_height="58dp"
        android:fontFamily="@font/stanberry"
        android:text="Series Increibles que te atraparan"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="175dp"
        android:layout_height="56dp"
        android:fontFamily="@font/stanberry"
        android:text="Vive una gran experiencia"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stanberry"
        android:text="@string/footer"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/heycomic"
        android:text="@string/app_name"
        android:textColor="#57BBFD"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="201dp"
        android:layout_height="58dp"
        android:background="@drawable/custom_buttom"
        android:fontFamily="@font/heycomic"
        android:text="@string/button"
        android:textSize="15dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <!-- <TextView
        android:id="@+id/textView6"
        android:layout_width="253dp"
        android:layout_height="123dp"
        android:fontFamily="@font/stanberry"
        android:text="@string/frase"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" /> -->


</androidx.constraintlayout.widget.ConstraintLayout>